2009-08-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Post-release version suffix added.

	* data/tdict-std-compound.txt: Remove loose compounds.
	* data/tdict-{ict,district,proper,common,science,lang-ethnic,geo}.txt:
	Add words.

2009-06-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Bump library revision.

	* configure.in, NEWS:
	=== Version 0.1.12 ===

2009-06-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std-compound.txt: Remove loose compounds.

2009-06-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std-compound.txt: Remove loose compounds.
	* data/tdict-{ict,district,proper,common,science,geo}.txt: Add words.

2009-06-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (brk_maximal_do_impl, best_brk_contest): 
	Back out weighted scoring for solution contest, as it sometimes tries
	too hard to minimize word count, even though another solution with more
	known words can match more text and results in smaller unknown zone.
	Accidental words problem, which this scheme tried to address, has
	already been alleviated with increased recovery threshold.

2009-06-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (brk_maximal_do_impl): Add break pos at
	string end and let it enter the contest, instead of backing it out by
	moving back str_pos as done in previous commit. That commit just
	missed the point. Doing the right thing also guarantees consistency
	with the case when some text of valid words is appended to the string.

2009-06-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (brk_maximal_do_impl): Set str_pos for cases
	that fail at string end back to the last progress position, to prevent
	it from wrongly winning the contest over some good candidates.

2009-06-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/tkbrk/brk-maximal.c (RECOVERED_WORDS): Increase recovery