@@ -7,6 +7,7 @@
 
 #include <string.h>
 #include <stdlib.h>
+#include <stdint.h>
 #include <thai/tis.h>
 #include <thai/thctype.h>
 #include <thai/thbrk.h>
@@ -24,12 +25,16 @@ int
 th_brk_line (const thchar_t *in, thchar_t *out, size_t n, const char *delim)
 {
     int        *brk_pos;
-    int         n_brk_pos, i, j;
+    size_t      n_brk_pos, i, j;
     int         delim_len;
     thchar_t   *p_out;
 
     n_brk_pos = strlen ((const char *) in);
+    if (n_brk_pos > SIZE_MAX / sizeof (int))
+        return 0;
     brk_pos = (int *) malloc (n_brk_pos * sizeof (int));
+    if (!brk_pos)
+        return 0;
 
     n_brk_pos = th_brk (in, brk_pos, n_brk_pos);
     
